--- a/historyvn/html/index.html
+++ b/historyvn/html/index.html
@@ -10,40 +10,48 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <header class="header">
+    <!-- header-->
+    <header class="header absolute">
       <div class="container">
+        <!-- header navigation-->
         <div class="header__nav">
+          <!--logo-->
           <div class="logo"><a><img src="../img/logo-white.png"></a></div>
-          <nav class="nav-head">
+          <!-- menu navigation-->
+          <nav class="nav-head non-border">
             <ul class="nav-head__list">
-              <li class="nav-head__item"><a class="nav-head__link" href="index.html">Trang chủ</a></li>
-              <li class="nav-head__item"><a class="nav-head__link" href="#section-quickview">Sơ lược</a></li>
-              <li class="nav-head__item"><a class="nav-head__link" href="#section-period">Giai đoạn lịch sử</a></li>
-              <li class="nav-head__item"><a class="nav-head__link" href="#section-blog">Bài viết</a></li>
-              <li class="nav-head__item"><a class="nav-head__link" href="#section-event">Sự kiện</a></li>
-              <li class="nav-head__item"><a class="nav-head__link" href="gallery.html">Thư viện</a></li>
-              <li class="nav-head__item"><a class="nav-head__link" href="#section-contact">Liên hệ </a></li>
+              <li class="nav-head__item"><a class="nav-head__link " href="index.html">Trang chủ</a></li>
+              <li class="nav-head__item"><a class="nav-head__link " href="#section-quickview">Sơ lược</a></li>
+              <li class="nav-head__item"><a class="nav-head__link " href="#section-period">Giai đoạn lịch sử</a></li>
+              <li class="nav-head__item"><a class="nav-head__link " href="#section-blog">Bài viết</a></li>
+              <li class="nav-head__item"><a class="nav-head__link " href="#section-event">Sự kiện</a></li>
+              <li class="nav-head__item"><a class="nav-head__link " href="gallery.html">Thư viện</a></li>
+              <li class="nav-head__item"><a class="nav-head__link " href="#section-contact">Liên hệ </a></li>
             </ul>
           </nav>
-          <div class="nav-bar"><span class="nav-bar__line">  </span></div>
+          <!-- button bar -->
+          <div class="nav-bar nav-bar--gold"><span class="nav-bar__line">  </span></div>
           <div class="nav-overlay">  </div>
+          <!-- navigation mobile-->
           <nav class="nav-responsive">
             <div class="nav-responsive__close"><i class="fa fa-times" aria-hidden="true"></i></div>
             <ul class="nav-responsive__list">
-              <li class="nav-responsive__item"><a class="nav-responsive__link" href="#">Trang chủ</a></li>
-              <li class="nav-responsive__item"><a class="nav-responsive__link" href="#">Sơ lược</a></li>
-              <li class="nav-responsive__item"><a class="nav-responsive__link" href="#">Giai đoạn lịch sử</a></li>
-              <li class="nav-responsive__item"><a class="nav-responsive__link" href="#">Bài viết</a></li>
+              <li class="nav-responsive__item"><a class="nav-responsive__link" href="index.html">Trang chủ</a></li>
+              <li class="nav-responsive__item"><a class="nav-responsive__link" href="#section-quickview">Sơ lược</a></li>
+              <li class="nav-responsive__item"><a class="nav-responsive__link" href="#section-period">Giai đoạn lịch sử</a></li>
+              <li class="nav-responsive__item"><a class="nav-responsive__link" href="#section-blog">Bài viết</a></li>
               <li class="nav-responsive__item"><a class="nav-responsive__link" href="#">Sự Kiện</a></li>
-              <li class="nav-responsive__item"><a class="nav-responsive__link" href="#">Thư viện</a></li>
-              <li class="nav-responsive__item"><a class="nav-responsive__link" href="#">Liên hệ</a></li>
+              <li class="nav-responsive__item"><a class="nav-responsive__link" href="gallery.html">Thư viện</a></li>
+              <li class="nav-responsive__item"><a class="nav-responsive__link" href="#section-contact">Liên hệ</a></li>
             </ul>
           </nav>
         </div>
       </div>
     </header>
+    <!-- slide banner-->
     <div class="slides">
       <div class="slides-item">
+        <!--banner -1-->
         <section class="banner banner--1">
           <div class="container">
             <div class="banner__box">
@@ -54,6 +62,7 @@
         </section>
       </div>
       <div class="slides-item active">
+        <!--banner -2-->
         <section class="banner banner--2">
           <div class="container">
             <div class="banner__box">
@@ -63,6 +72,7 @@
           </div>
         </section>
       </div>
+      <!--banner -3-->
       <div class="slides-item">
         <section class="banner banner--3">
           <div class="container">
@@ -73,12 +83,14 @@
           </div>
         </section>
       </div>
+      <!-- slide list circle-->
       <ul class="slides-list">
         <li class="slides-circle"><a class="slides-link" href="#"></a></li>
         <li class="slides-circle"><a class="slides-link active" href="#"></a></li>
         <li class="slides-circle"><a class="slides-link" href="#"></a></li>
       </ul>
     </div>
+    <!-- section quick view-->
     <section class="section-quickview u-grey-bg" id="section-quickview">
       <div class="container">
         <div class="u-flex u-align-item-center u-justify-content-center u-margin-bottom-8">
@@ -86,6 +98,7 @@
         </div>
         <div class="row">
           <div class="col-1-of-2">
+            <!-- content-->
             <h3 class="heading-primary u-margin-bottom-4">Tìm hiểu nhanh Lịch sử Việt</h3>
             <p class="paragraph u-margin-bottom-4">
               Lịch sử Việt Nam nếu tính từ lúc có mặt con người sinh sống thì đã có hàng vạn năm trước Công nguyên, 
@@ -96,11 +109,13 @@
             </p><a class="btn btn-primary" href="overview.html">Xem thêm   </a>
           </div>
           <div class="col-1-of-2">
+            <!--coposition-->
             <div class="composition"><img class="composition__img composition__img--1" src="../img/general-1.jpg" alt="quickview-1"><img class="composition__img composition__img--2" src="../img/general-2.jpg" alt="quickview-2"><img class="composition__img composition__img--3" src="../img/general-3.jpeg" alt="quickview-3"></div>
           </div>
         </div>
       </div>
     </section>
+    <!-- section period-->
     <section class="section-period" id="section-period">
       <div class="container">
         <div class="u-flex u-align-item-center u-justify-content-center u-margin-bottom-8">
@@ -108,9 +123,10 @@
         </div>
         <div class="row">
           <div class="col-1-of-4">
+            <!--period item-->
             <div class="period">
               <div class="period__img"><img class="period__img" src="../img/kyhongbang.jpg" alt="kyhongbang">
-                <div class="period__box"><a class="btn-line period__btn" href="#">Tìm hiểu thêm</a></div>
+                <div class="period__box"><a class="btn-line period__btn" href="period.html">Tìm hiểu thêm</a></div>
                 <div class="period__overlay"></div>
               </div>
               <div class="period__content">
@@ -120,9 +136,10 @@
             </div>
           </div>
           <div class="col-1-of-4">
+            <!--period item-->
             <div class="period">
-              <div class="period__img"><img class="period__img" src="../img/HaibaTrung.jpeg" alt="kyhongbang">
-                <div class="period__box"><a class="btn-line period__btn" href="#">Tìm hiểu thêm</a></div>
+              <div class="period__img"><img class="period__img" src="../img/haibatrung.jpg" alt="kyhongbang">
+                <div class="period__box"><a class="btn-line period__btn" href="period.html">Tìm hiểu thêm</a></div>
                 <div class="period__overlay"></div>
               </div>
               <div class="period__content">
@@ -132,21 +149,23 @@
             </div>
           </div>
           <div class="col-1-of-4">
+            <!--period item-->
             <div class="period">
               <div class="period__img"><img class="period__img" src="../img/thoinguyen.jpg" alt="kyhongbang">
-                <div class="period__box"><a class="btn-line period__btn" href="#">Tìm hiểu thêm</a></div>
+                <div class="period__box"><a class="btn-line period__btn" href="period.html">Tìm hiểu thêm</a></div>
                 <div class="period__overlay"></div>
               </div>
               <div class="period__content">
-                <div class="period__title">Thời nhà Nguyễn</div>
-                <div class="period__date">(1802–1858)       </div>
+                <div class="period__title">Thời kỳ quân chủ </div>
+                <div class="period__date">(939–1945)       </div>
               </div>
             </div>
           </div>
           <div class="col-1-of-4">
+            <!--period item-->
             <div class="period">
               <div class="period__img"><img class="period__img" src="../img/chientranhvietnam.jpg" alt="kyhongbang">
-                <div class="period__box"><a class="btn-line period__btn" href="#">Tìm hiểu thêm</a></div>
+                <div class="period__box"><a class="btn-line period__btn" href="period.html">Tìm hiểu thêm</a></div>
                 <div class="period__overlay"></div>
               </div>
               <div class="period__content">
@@ -158,6 +177,7 @@
         </div>
       </div>
     </section>
+    <!-- section blog                        -->
     <section class="section-blog u-grey-bg" id="section-blog">
       <div class="container">
         <div class="u-flex u-align-item-center u-justify-content-center u-margin-bottom-8">
@@ -165,6 +185,7 @@
         </div>
         <div class="row">
           <div class="col-1-of-2">
+            <!--article big-->
             <div class="article-v" hfref="#">
               <div class="article-v__img"><img src="../img/anh-ao-dai-giao-lanh.jpg" alt="ao dai giao lanh"></div>
               <div class="article-v__content">
@@ -179,6 +200,7 @@
           <div class="col-1-of-2">
             <div class="row">
               <div class="col-1-of-1">
+                <!--article small-->
                 <div class="article-h">
                   <div class="article-h__img"><img src="../img/cau-the-huc-xua.jpg" alt="ha noi xua"></div>
                   <div class="article-h__content">
@@ -191,6 +213,7 @@
                 </div>
               </div>
               <div class="col-1-of-1">
+                <!--article small-->
                 <div class="article-h">
                   <div class="article-h__img"><img src="../img/Vua-bao-dai.jpg" alt="vua bao dai"></div>
                   <div class="article-h__content">
@@ -205,9 +228,10 @@
             </div>
           </div>
         </div>
-        <div class="u-flex u-align-item-center u-justify-content-center u-margin-top-6"><a class="btn btn-primary" href="#">Xem thêm nhiều bài viết khác</a></div>
+        <div class="u-flex u-align-item-center u-justify-content-center u-margin-top-6"><a class="btn btn-primary" href="blog.html">Xem thêm nhiều bài viết khác</a></div>
       </div>
     </section>
+    <!-- section event-->
     <section class="section-event" id="section-event">
       <div class="container">
         <div class="u-flex u-align-item-center u-justify-content-center u-margin-bottom-8 u-flex-column">
@@ -215,6 +239,7 @@
         </div>
         <div class="row">
           <div class="col-1-of-3">
+            <!--card event-->
             <div class="card">
               <div class="card__side card__side-front">
                 <div class="card__head card__head--1">
@@ -236,6 +261,7 @@
             </div>
           </div>
           <div class="col-1-of-3">
+            <!--card event-->
             <div class="card">
               <div class="card__side card__side-front">
                 <div class="card__head card__head--2">
@@ -257,6 +283,7 @@
             </div>
           </div>
           <div class="col-1-of-3">
+            <!--card event-->
             <div class="card">
               <div class="card__side card__side-front">
                 <div class="card__head card__head--3">
@@ -281,6 +308,7 @@
         <div class="u-flex u-align-item-center u-justify-content-center"><a class="btn btn-primary" href="#">Xem thêm các sự kiện khác</a></div>
       </div>
     </section>
+    <!--section contact-->
     <section class="section-contact u-grey-bg">
       <div class="container">
         <div class="u-flex u-align-item-center u-justify-content-center u-margin-bottom-8">
@@ -295,6 +323,7 @@
             </p>
           </div>
           <div class="col-1-of-2">
+            <!--contact form-->
             <form action="#">
               <div class="form__group">
                 <input class="form__input" type="text" require placeholder="Tên của bạn">
@@ -313,6 +342,7 @@
         </div>
       </div>
     </section>
+    <!-- footer-->
     <footer class="footer">
       <div class="container">
         <div class="row">
@@ -348,6 +378,7 @@
           </div>
         </div>
       </div>
+      <!--footer copy-->
       <div class="footer__copy">
         <div class="container">
           <div class="u-text-center">
