--- a/historyvn/html/gallery.html
+++ b/historyvn/html/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tin tức</title>
+    <title>Thư viện</title>
     <link rel="stylesheet" href="../css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900&amp;display=swap&amp;subset=vietnamese" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -57,13 +57,146 @@
       </div>
     </section>    
     <!-- blog gallery-->
-    <section class="blog-gallery bg-gray" style="padding: 10rem 0">
+    <section class="section-gallery bg-gray" style="padding: 10rem 0">
       <div class="container">
-        <div class="gallery-smart">
-          .gallery-smart
+        <div class="u-flex u-align-item-center u-justify-content-center u-margin-bottom-8">
+          <h2 class="heading-section">Hình ảnh nổi bật</h2>
+        </div>
+        <!-- hàng -->
+        <div class="gallery-smart-row">
+          <!-- cột 1/4 -->
+          <div class="gallery-smart-col-1">
+            <div class="gallery-smart-row">
+              <div class="gallery-smart-col-4">
+                <div class="wrap-img">
+                  <img src="../img/anduongvuong-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="gallery-smart-col-4">
+                <div class="wrap-img">
+                  <img src="../img/banner-1.jpg" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+           <!-- cột 2/4 -->
+          <div class="gallery-smart-col-2">
+            <div class="wrap-img">
+                  <img src="../img/banner-2.jpg" alt="">
+                </div>
+          </div>
+           <!-- cột 1/4 -->
+          <div class="gallery-smart-col-1">
+            <div class="gallery-smart-row">
+              <div class="gallery-smart-col-4">
+                <div class="wrap-img">
+                  <img src="../img/general-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="gallery-smart-col-4">
+                <div class="wrap-img">
+                  <img src="../img/general-2.jpg" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- kết hàng -->
+        <div class="u-flex u-align-item-center u-justify-content-center u-margin-bottom-8 u-margin-top-6">
+          <h2 class="heading-section">Hình ảnh khác</h2>
+        </div>
+        <!-- hàng -->
+        <div class="gallery-smart-row">
+          <!-- cột 1/4 -->
+          <div class="gallery-smart-col-1">
+            <div class="wrap-img">
+                  <img src="../img/hoian.jpg" alt="">
+                </div>
+          </div>
+          <!-- cột 1/4 -->
+          <div class="gallery-smart-col-1">
+            <div class="wrap-img">
+                  <img src="../img/kyhongbang.jpg" alt="">
+                </div>
+          </div>
+          <!-- cột 1/4 -->
+          <div class="gallery-smart-col-1">
+            <div class="wrap-img">
+                  <img src="../img/nandoi-1.jpg" alt="">
+                </div>
+          </div>
+          <!-- cột 1/4 -->
+          <div class="gallery-smart-col-1">
+            <div class="wrap-img">
+                  <img src="../img/nandoi-2.jpg" alt="">
+                </div>
+          </div>
+          <!-- cột 1/4 -->
+          <div class="gallery-smart-col-1">
+            <div class="wrap-img">
+                  <img src="../img/nguyenaiquoc.jpg" alt="">
+                </div>
+          </div>
+          <!-- cột 1/4 -->
+          <div class="gallery-smart-col-1">
+            <div class="wrap-img">
+                  <img src="../img/nhaly.jpg" alt="">
+                </div>
+          </div>
+          <!-- cột 1/4 -->
+          <div class="gallery-smart-col-1">
+            <div class="wrap-img">
+                  <img src="../img/overview-2.jpg" alt="">
+                </div>
+          </div>
+          <!-- cột 1/4 -->
+          <div class="gallery-smart-col-1">
+            <div class="wrap-img">
+                  <img src="../img/overview-4.jpg" alt="">
+                </div>
+          </div>
+           <!-- kết hàng -->
+
+           
         </div>
       </div>
     </section>
+      <!-- footer-->
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="footer__logo"><a href="#"><img src="../img/logo-white.png" alt=""></a></div>
+          </div>
+          <div class="col-1-of-4">
+            <h5 class="footer__heading">Địa chỉ</h5>
+            <div class="footer__info">
+              <ul class="footer__list">
+                <li class="footer__item">Ngoc Khanh, Ba Dinh, Ha Noi</li>
+                <li class="footer__item">112 Ngoc Khanh</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <h5 class="footer__heading">Số điện thoại</h5>
+            <div class="footer__info">
+              <ul class="footer__list">
+                <li class="footer__item">+84 XXX XXX XXX</li>
+                <li class="footer__item">+84 24 XXX XXX XX</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <h5 class="footer__heading">Liên hệ hợp tác</h5>
+            <div class="footer__sub">
+              <div class="form__group">
+                <input class="form__input" type="email" require placeholder="Email của bạn">
+              </div>
+              <div class="footer__social"><a class="footer__social-link" href="#"><i class="fa fa-facebook" aria-hidden="true"></i>        </a><a class="footer__social-link" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a class="footer__social-link" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a><a class="footer__social-link" href="#"><i class="fa fa-google" aria-hidden="true"></i></a></div>
+            </div>
+          </div>
+        </div>
+      </div>
       <!--footer copy-->
       <div class="footer__copy">
         <div class="container">
@@ -73,7 +206,7 @@
         </div>
       </div>
     </footer>
-    <script src="../js/catalog.js"></script>
+    <script src="../js/gallery.js"></script>
     <script src="../js/script.js"></script>
   </body>
 </html>
