--- a/historyvn/html/index.html
+++ b/historyvn/html/index.html
@@ -124,7 +124,7 @@
         <div class="row">
           <div class="col-1-of-4">
             <!--period item-->
-            <div class="period">
+            <div class="period" id="period-a">
               <div class="period__img"><img class="period__img" src="../img/kyhongbang.jpg" alt="kyhongbang">
                 <div class="period__box"><a class="btn-line period__btn" href="period.html">Tìm hiểu thêm</a></div>
                 <div class="period__overlay"></div>
@@ -137,7 +137,7 @@
           </div>
           <div class="col-1-of-4">
             <!--period item-->
-            <div class="period">
+            <div class="period" id="period-b">
               <div class="period__img"><img class="period__img" src="../img/haibatrung.jpg" alt="kyhongbang">
                 <div class="period__box"><a class="btn-line period__btn" href="period.html">Tìm hiểu thêm</a></div>
                 <div class="period__overlay"></div>
@@ -150,7 +150,7 @@
           </div>
           <div class="col-1-of-4">
             <!--period item-->
-            <div class="period">
+            <div class="period" id="period-c">
               <div class="period__img"><img class="period__img" src="../img/thoinguyen.jpg" alt="kyhongbang">
                 <div class="period__box"><a class="btn-line period__btn" href="period.html">Tìm hiểu thêm</a></div>
                 <div class="period__overlay"></div>
@@ -163,7 +163,7 @@
           </div>
           <div class="col-1-of-4">
             <!--period item-->
-            <div class="period">
+            <div class="period" id="period-d">
               <div class="period__img"><img class="period__img" src="../img/chientranhvietnam.jpg" alt="kyhongbang">
                 <div class="period__box"><a class="btn-line period__btn" href="period.html">Tìm hiểu thêm</a></div>
                 <div class="period__overlay"></div>
@@ -249,7 +249,7 @@
                   <div class="card__title">Triển lãm ảnh hà nội xưa</div>
                   <ul class="card__list">
                     <li class="card__item">100 Bức ảnh </li>
-                    <li class="card__item">Bảo Tàng Hà N</li>
+                    <li class="card__item">Bảo Tàng Hà Nội</li>
                     <li class="card__item">Sức chưa 500 người</li>
                   </ul>
                   <div class="card__date">1/5/2020</div>
@@ -309,7 +309,7 @@
       </div>
     </section>
     <!--section contact-->
-    <section class="section-contact u-grey-bg">
+    <section id ="section-contact" class="section-contact u-grey-bg">
       <div class="container">
         <div class="u-flex u-align-item-center u-justify-content-center u-margin-bottom-8">
           <h2 class="heading-section">Liên hệ  </h2>
@@ -388,6 +388,7 @@
       </div>
     </footer>
     <script src="../js/script.js"></script>
-    <script src="../js/slide-banner.js">     </script>
+    <script src="../js/period.js"></script>
+    <script src="../js/slide-banner.js"></script>
   </body>
 </html>
