--- a/historyvn/html/period.html
+++ b/historyvn/html/period.html
@@ -70,7 +70,7 @@
               <li class="tab__item"><a id="period-d" class="tab__link active" href="#">Thời hiện đại</a></li>
             </ul>
             <!-- tab content Thời cổ đại (2879–111 TCN)-->
-            <div class="tab__content" >
+            <div class="tab__content" id="period-a">
               <div class="u-flex u-align-item-center u-justify-content-center u-margin-bottom-8">
                 <h2 class="heading-section">Thời cổ đại (2879–111 TCN)</h2>
               </div>
@@ -194,7 +194,7 @@
               </div>
             </div>
             <!-- tab content Thời kỳ Bắc thuộc (111 TCN–938 SCN)-->
-            <div class="tab__content" >
+            <div class="tab__content" id="period-b">
               <div class="u-flex u-align-item-center u-justify-content-center u-margin-bottom-8">
                 <h2 class="heading-section">Thời kỳ Bắc thuộc (111 TCN–938 SCN)</h2>
               </div>
@@ -320,7 +320,7 @@
               </div>
             </div>
             <!-- tab content Thời kỳ quân chủ (939–1945)-->
-            <div class="tab__content" >
+            <div class="tab__content" id="period-c">
               <div class="u-flex u-align-item-center u-justify-content-center u-margin-bottom-8">
                 <h2 class="heading-section">Thời kỳ quân chủ (939–1945)</h2>
               </div>
@@ -497,7 +497,7 @@
               </div>
             </div>
             <!-- tab content Thời kỳ hiện đại (1858–nay)-->
-            <div class="tab__content active" >
+            <div class="tab__content active" id="period-d" >
               <div class="u-flex u-align-item-center u-justify-content-center u-margin-bottom-8">
                 <h2 class="heading-section">Thời kỳ hiện đại (1858–nay)</h2>
               </div>
